WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51661
ContextShadow should use AffineTransform instead of TransformationMatrix
https://bugs.webkit.org/show_bug.cgi?id=51661
Summary
ContextShadow should use AffineTransform instead of TransformationMatrix
Helder Correia
Reported
2010-12-27 17:40:57 PST
ContextShadow needs the CTM to make sure shadows are not affected by transformations when drawing on a canvas. AffineTransform is sufficient in this case.
Attachments
Patch
(6.33 KB, patch)
2010-12-27 17:45 PST
,
Helder Correia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2010-12-27 17:45:02 PST
Created
attachment 77530
[details]
Patch
Ariya Hidayat
Comment 2
2010-12-27 19:46:58 PST
Comment on
attachment 77530
[details]
Patch LGTM. re=me
Ariya Hidayat
Comment 3
2010-12-27 20:45:02 PST
Comment on
attachment 77530
[details]
Patch cq+
WebKit Commit Bot
Comment 4
2010-12-27 21:33:18 PST
Comment on
attachment 77530
[details]
Patch Clearing flags on attachment: 77530 Committed
r74708
: <
http://trac.webkit.org/changeset/74708
>
WebKit Commit Bot
Comment 5
2010-12-27 21:33:24 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-12-28 07:56:41 PST
http://trac.webkit.org/changeset/74708
might have broken Leopard Intel Debug (Tests)
Sam Weinig
Comment 7
2010-12-28 10:37:51 PST
It seem like the function name getTransformationMatrixFromContext really should be changed as well.
Helder Correia
Comment 8
2011-01-05 19:06:57 PST
(In reply to
comment #7
)
> It seem like the function name getTransformationMatrixFromContext really should be changed as well.
Just a follow-up: the function was removed in
http://trac.webkit.org/changeset/74947
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug