2010-12-27  Helder Correia  <helder@sencha.com>

Reviewed by Ariya Hidayat.

        ContextShadow should use AffineTransform instead of TransformationMatrix
        https://bugs.webkit.org/show_bug.cgi?id=51661

        ContextShadow needs the CTM to make sure shadows are not affected by
        transformations when drawing on a canvas. AffineTransform is sufficient
        in this case.

        Existing tests: fast/canvas/canvas*shadow*html

        * platform/graphics/ContextShadow.cpp:
        (WebCore::ContextShadow::mustUseContextShadow):
        (WebCore::ContextShadow::adjustBlurDistance):
        (WebCore::ContextShadow::calculateLayerBoundingRect):
        * platform/graphics/ContextShadow.h:
        * platform/graphics/cairo/ContextShadowCairo.cpp:
        (WebCore::ContextShadow::getTransformationMatrixFromContext):
        * platform/graphics/qt/ContextShadowQt.cpp:
        (WebCore::ContextShadow::getTransformationMatrixFromContext):

Canonical link: https://commits.webkit.org/65047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74708 268f45cc-cd09-0410-ab3c-d52691b4dbfc